# Triak_Trade

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260602_0001_initial_storage.py  20260627_0002_live_state_storage.py  20260627_0003_remove_admin_approval_schema.py
config/: strategies.yaml
docs/: 01-overview.md  02-backtesting-architecture.md  03-simulator-internals.md  04-real-backtest-pipeline.md  05-scoring-and-reports.md  06-strategies.md  07-data-and-config.md  08-bugs-and-recommendations.md  README.md
scripts/: run_ghahr_backtest.py  run_ghahr_backtest.sh  stack_up.sh
scripts/docker/: run_ajil_gateway.py  run_service.py
src/triak_trade/: __init__.py  cli.py
tests/: test_cli.py  test_docs_consistency.py  test_health.py  test_logging.py  test_settings.py
tests/admin_bot/: test_admin_auth.py  test_admin_bot_cli.py  test_admin_bot_handlers_runtime.py  test_admin_bot_integration.py  test_admin_bot_runtime.py  test_admin_callbacks.py  test_admin_formatter.py  test_admin_service.py  test_admin_telegram_bot.py
tests/agents/: test_channel_agent.py  test_channel_agent_classifier_contract.py  test_channel_agent_context.py
tests/ai/: test_ai_classifier.py  test_ai_prompt_contract.py  test_gateway_client.py  test_runtime.py
tests/backtesting/: test_backtest_admin_bot_flow.py  test_backtest_cli.py  test_backtest_engine.py  test_backtest_fee_and_consistency.py  test_backtest_integration.py  test_backtest_report.py  (+9 more)
(+228 files in other folders)
