[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triak-trade"
version = "0.1.0"
description = "Triak_Trade modular signal intelligence foundation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Triak_Trade" }]
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pymysql>=1.1",
  "redis>=5.0",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "structlog>=24.2",
  "python-json-logger>=2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
triak-trade = "triak_trade.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["triak_trade"]

[[tool.mypy.overrides]]
module = ["redis.*", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
